# adops-agent-platform

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  check_syntax.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
dashboards/: adops_dashboard.json
datasets/: campaigns.csv  delivery_logs.csv  inventory.csv  questions.json
docs/: AdTechMetrics.md  Architecture.md  InvestigationEngine.md  KnowledgeGraph.md  RootCauseEngine.md
evaluation/: evaluator.py
knowledge_base/: auction_competitiveness.md  budget_exhaustion.md  creative_rejection.md  ctr_drop.md  fill_rate_drop.md  frequency_cap.md  geo_targeting.md  inventory_not_serving.md  supply_shortage.md  underdelivery.md
monitoring/: prometheus.yml
scripts/: init_db.py  run_eval.py  seed_data.py
src/agents/: __init__.py  analysis_agent.py  query_agent.py  response_agent.py  retrieval_agent.py
src/analytics/: __init__.py  analytics_factory.py  auction_analyzer.py  ctr_analyzer.py  fill_rate_analyzer.py  inventory_analyzer.py  pacing_analyzer.py
src/api/: app.py  dependencies.py  metrics.py  middleware.py  routes.py
src/config/: settings.py
src/dashboards/: router.py
src/ingestion/: data_loader.py  document_loader.py  embedder.py  pipeline.py  vector_store.py
src/investigation/: evidence_collector.py  hypothesis_generator.py  hypothesis_ranker.py  investigation_planner.py  orchestrator.py  recommendation_engine.py  report_generator.py  root_cause_engine.py
src/knowledge_graph/: graph_builder.py  (+2 more)
tests/: conftest.py
(+11 files in other folders)
