[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "adops-agent-platform"
version = "0.1.0"
description = "AI-driven AdOps Agent Platform for campaign diagnostics and remediation"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=1.10.0,<2.0.0",
    "sqlalchemy>=1.4.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "qdrant-client>=1.6.0,<2.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "pandas>=2.1.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "langchain>=0.0.300,<1.0.0",
    "openai>=0.28.0,<1.0.0",
    "prometheus-client>=0.19.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "httpx>=0.25.0,<1.0.0",
    "ruff>=0.1.0,<1.0.0",
]

[project.scripts]
adops = "src.api.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
